# ai-translation-with-style

./: .env.example  .gitignore  AI_Translation_Architecture_Refactoring_Plan.md  BRANCH_INFO.md  Class_Diagram_And_Interfaces.md  GETTING_STARTED.md  GUI_README.md  IMPLEMENTATION_SUMMARY.md  Implementation_Mapping_Analysis.md  Implementation_Summary.md  LICENSE  QUALIFICATION_TEST_RESULTS.md  README.md  README_REFACTORED.md  REFACTORED_ARCHITECTURE_PLAN.md  REFACTORED_README.md  REFACTORING_SUMMARY.md  TEST_PROOF_SUMMARY.md  UPDATE_GUIDE.md  architecture_docs.md  architecture_proof_test.py  batch_demo.py  batch_production.py  check_api_keys.py  circuit_breaker_impl.py  compare_test.py  comprehensive_test.py  copy_files.sh  core_interfaces.py  debug_in_project.py  debug_test.py  demo_batch_translation.py  demo_config.json  demo_gui.py  demo_new_architecture.py  di_container.py  error_handling_test.py  example_runner.py  gui_batch_orchestrator.py  install_gui_deps.sh  (+20 more)
applet/: __init__.py  batch_orchestrator.py  orchestrator.py  translation_applet.py  translation_orchestrator.py  translation_orchestrator_service.py
config/: api_keys.json  api_keys.json.example  api_keys.json.template  api_keys_demo.json  application.yaml  config.yaml  default.yaml  development.yaml  preset_translation.json  production.yaml  production_config.json  prompts.json  providers.yaml  schema.yaml  translation.yaml  translation_config.yaml
docs/: arch.mmd  class.mmd  translation_service.mmd
examples/: timer_demo.py
legacy_modules/: enhanced_block_manager.py  enhanced_prompt_engineer.py  (+3 more)
(+178 files in other folders)
